--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -8,6 +8,8 @@ input {
 
 output {
 	elasticsearch {
-		hosts => "${ELASTICSEARCH_URL}"
-	}
+		hosts => "${PIPE_ELASTICSEARCH_URL}"
+		user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
+		password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
+	}	
 }
