--- a/filebeat/config/filebeat.yml
+++ b/filebeat/config/filebeat.yml
@@ -5,3 +5,5 @@ filebeat.prospectors:
 
 output.logstash:
   hosts: ["${LOGSTASH_URL}"]
+  username: "${FILEBEAT_USER}"
+  password: "${FILEBEAT_PASSWORD}"
