Fucking logtrail working

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -4,10 +4,30 @@ input {
 	}
 }
 
-## Add your filters / logstash plugins configuration here
+filter {
+	grok {
+		match => { 
+			"message" => "\[%{TIMESTAMP_ISO8601:timestamp}\]\[%{DATA:log_level}\]\[%{DATA:logger_name}\] \[%{WORD:marker}\] %{GREEDYDATA:log_message}"
+		}
+	}
+	mutate {
+		strip => ["log_level", "logger_name"]
+	}
+	ruby {
+		code => "str = event.get('logger_name'); lastIndex = str.rindex('.');event.set('class',lastIndex ? str[(lastIndex+1)..-1] : str)"
+	}
+	date {
+		match => ["timestamp", "yyyy-MM-dd HH:mm:ss,SSS", "ISO8601"]
+		timezone => "Etc/UTC"
+	}
+}
 
 output {
+	stdout {
+		codec => rubydebug
+	}
 	elasticsearch {
+		index => "logstash-elasticsearch"
 		hosts => "${PIPE_ELASTICSEARCH_URL}"
 		user => "${XPACK_MONITORING_ELASTICSEARCH_USERNAME}"
 		password => "${XPACK_MONITORING_ELASTICSEARCH_PASSWORD}"
